# fhelipe

./: .gitignore  .gitmodules  Dockerfile  README.md
frontend/: .gitignore  setup.cfg
frontend/fheapps/: __init__.py
frontend/fheapps/base/: __init__.py  conv.py  fc.py  matmul.py  max_pool.py  mult_chain.py  relu.py
frontend/fheapps/logreg/: .gitignore  __init__.py  actions.py  logreg.py  manual.py  shared.py  unenc.py
frontend/fheapps/lola/: base_cifar.py  base_mnist.py  lola_cifar.py  lola_mnist.py  manual_cifar.py  manual_mnist.py  manual_shared.py  shared.py
frontend/fheapps/nn_resnet/: __init__.py  resnet.py
frontend/fheapps/resnet/: .gitignore  __init__.py  base_resnet.py  manual.py  resnet.py  resnet_inline.py
frontend/fheapps/rnn/: __init__.py  imdb.py  rnn.py
frontend/fheapps/squeezenet/: checkpoint.pt  parse.py  squeezenet.py  submit.py
frontend/fheapps/tensor/: __init__.py  fft.py  innerprod.py  mttkrp.py  ttm.py  ttv.py
frontend/tensorfhe/: __init__.py
frontend/tensorfhe/app/: __init__.py  app.py  datapath.py  dataset.py  exe_manager.py
frontend/tensorfhe/core/: __init__.py  _input.py  _tensor.py  _torch_input.py  _vector.py  base_op_value.py  repack.py  utils.py
frontend/tensorfhe/lib/: __init__.py  avg_pool.py  concat.py  conv.py  matrix_mul.py  sign.py  utils.py
frontend/tensorfhe/nn/: __init__.py  approx_relu.py  avg_pool.py  batch_norm.py  conv.py  dropout.py  herpn.py  linear.py  module.py  nn.py  parameter.py  sequential.py
frontend/tests/: utils.py
frontend/tests/fheapps/: test_maxpool.py  test_tensor.py
(+339 files in other folders)
