[metadata]
name = fhelipe-frontend
version = 0.0.1
author = Aleksandar Krastev
author_email = alexalex@mit.edu

[options]
package_dir =
    = .
packages =
    tensorfhe
    fheapps
python_requires = ~=3.8
install_requires =
    nltk~=3.8
    numpy~=1.26
    pillow~=10.3
    torch~=1.13
    torchdata~=0.5.1
    torchtext~=0.14.1
    torchvision~=0.14.1
    typing_extensions~=4.12
